[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/shortest_path/niveles/win_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/shortest_path/Mapas/moscow_subway.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/shortest_path/Bases/HUD_OVERLAY.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/shortest_path/Bases/SP_Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/shortest_path/niveles/nivel_m4.gd" type="Script" id=5]
[ext_resource path="res://scenes/caballo.tscn" type="PackedScene" id=6]

[node name="nivel_m4" type="Node2D"]
script = ExtResource( 5 )

[node name="Horse_Overlay" parent="." instance=ExtResource( 6 )]
visible = false
z_index = 2

[node name="HUD_OVERLAY" parent="." instance=ExtResource( 3 )]

[node name="moscow_subway" parent="." instance=ExtResource( 2 )]

[node name="SP_Camera" parent="." instance=ExtResource( 4 )]

[node name="wonMenu" parent="." instance=ExtResource( 1 )]
